# clingy

./: CHANGELOG.md  README.md  clingy.py  pyproject.toml  requirements.txt  setup.py  tasks.py  tox.ini
tests/: email.txt  test_clingy.py
