[tool.poetry]
name = "clingy"
version = "1.0.0"
description = "A tool to save attachments from plain text emails"
license = "MIT"
authors = ["Matthew T. Kennerly <mtkennerly@gmail.com>"]
readme = "README.md"
repository = "https://github.com/mtkennerly/clingy"
keywords = ["email", "attachment"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Email",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.5"

[tool.poetry.group.dev.dependencies]
pytest = {version = "^8.1.1", python = ">=3.8"}
mypy = {version = "^1.9.0", python = ">=3.8"}
ruff = {version = "^0.3.3", python = ">=3.8"}
pre-commit = {version = "^3.6.2", python = ">=3.9"}

[tool.poetry.scripts]
clingy = 'clingy:main'

[tool.ruff]
line-length = 100
lint.extend-select = ["W605", "N"]
target-version = "py38"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
